--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@
                     i--;
                     continue;
                 }
+                else if(arr[i] == 0){
+                    arr.push(3);
+                    i++;
+                }
                 else{
                     arr.push(kk);
                 }
