--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 });
             }
             randomButton.addEventListener("click", function(){
-                
+                alert(`나의 계략에 놀아나고 있군.`);
             });
         </script>
     </body>
